[package]
name = "combine_image"
version = "0.1.0"
authors = ["zsytssk <zsytssk@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.22.3"
rect_packer = "0.2.1"
once_cell = "1.2.0"
# async-std = "1.2.0"
async-std = { git = 'https://github.com/stjepang/async-std', branch = 'new-scheduler' }

[lib]
name = "lib"
path = "src/lib.rs"